# TradeBytes

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 49645f988318_initial_schema.py  a2f7c8e3b401_add_alerts_tables.py
backend/: __init__.py  main.py
backend/Features/: main.py
backend/Visualization/: App.jsx  Mock_Data.py  api.ts  main.py  market.py  schema.sql  schemas.py
backend/alerts/: __init__.py  alert_service.py  api.py  event_scoring.py  schema.sql  shock_detector.py  websocket_broadcast.py
backend/core/: __init__.py  config.py  database.py  redis.py  security.py
backend/ingestion/: __init__.py  feature_store.py  market_data.py  news_collector.py
backend/ml/: __init__.py  features.py  lstm_model.py  train_models.py  training.py
backend/models/: __init__.py  alerts.py  gamification.py  news.py  trading.py  user.py
backend/schemas/: advisor.py  alerts.py  auth.py  challenges.py  community.py  gamification.py  leaderboard.py  learning.py  news.py  portfolio.py  prediction.py  simulation.py  trading.py  user.py
backend/services/: advisor_service.py  auth_service.py  challenge_service.py  community_service.py  gamification_service.py  leaderboard_service.py  learning_service.py  news_service.py  portfolio_service.py  prediction_service.py  simulation_service.py  trading_service.py  user_service.py
backend/websocket/: __init__.py  handlers.py  manager.py
docker/: nginx.conf
frontend/: alert_banner.html  alert_listener.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: diagnose_training.py  test_inference.py  train_model.py  verify_inference.py
tests/: _test_community.py  test_alert_event_scoring.py  test_all_apis.py
(+61 files in other folders)
