[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradebytes"
version = "0.1.0"
description = "AI-Powered Finance Education & Investment Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "webauthn>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    # Database
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    # Redis
    "redis[hiredis]>=5.0.0",
    # ML / AI
    "torch>=2.1.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "mlflow>=2.9.0",
    "transformers>=4.36.0",
    # NLP
    "sentence-transformers>=2.2.0",
    # Data
    "yfinance>=0.2.31",
    "ta>=0.11.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    # Vector DB
    "chromadb>=0.4.0",
    # WebSocket
    "websockets>=12.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "celery[redis]>=5.3.0",
    "structlog>=23.2.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
